# keepassx

./: CMakeLists.txt
cmake/: FindGcrypt.cmake
share/: CMakeLists.txt
share/translations/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: FilePath.cpp
src/crypto/: Crypto.cpp  Crypto.h  SymmetricCipher.cpp  SymmetricCipher.h  SymmetricCipherGcrypt.cpp
src/format/: KeePass2.h  KeePass2Reader.cpp
src/gui/: DatabaseSettingsWidget.ui  DatabaseTabWidget.cpp  DatabaseWidget.cpp  DatabaseWidget.h  MainWindow.cpp  MainWindow.h
utils/: CMakeLists.txt
